[package]
name = "opengraph-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# 웹 프레임워크
axum = "0.7"
# 비동기 런타임
tokio = { version = "1.0", features = ["full"] }
# HTTP 타입
http = "1.0"
# 타워 서비스 (미들웨어)
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
# JSON 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 환경 변수
dotenv = "0.15"
# 에러 처리
anyhow = "1.0"
thiserror = "1.0"
# 날짜/시간
chrono = { version = "0.4", features = ["serde"] }
# 데이터베이스
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
# 유효성 검사
validator = { version = "0.16", features = ["derive"] }
# 숫자 변환
bigdecimal = { version = "0.3", features = ["serde"] }
num-traits = "0.2"
